cabal-version: 3.8
name: opensolid-core
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2021
  build-depends:
    aeson,
    array,
    async,
    base,
    bytestring,
    colour,
    containers,
    deque,
    directory,
    filepath,
    hashable,
    indexed-traversable,
    random,
    scientific,
    text,
    vector,
    zlib,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wsafe
    -Wno-missed-extra-shared-lib
    -Wno-x-data-list-nonempty-unzip
    -fwrite-ide-info
    -hiedir=.hie
    -haddock
    -dcmm-lint

  default-extensions:
    BlockArguments
    CApiFFI
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    GHCForeignImportPrim
    ImplicitParams
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RoleAnnotations
    StrictData
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses
    UnliftedFFITypes
    ViewPatterns

library
  import: config
  exposed-modules:
    OpenSolid.Angle
    OpenSolid.Arc2D
    OpenSolid.ArcLength
    OpenSolid.Area
    OpenSolid.Arithmetic
    OpenSolid.Array
    OpenSolid.Array2D
    OpenSolid.Axis2D
    OpenSolid.Axis3D
    OpenSolid.Bezier
    OpenSolid.Binary
    OpenSolid.Bisection
    OpenSolid.Body3D
    OpenSolid.Body3D.BoundedBy
    OpenSolid.Bool
    OpenSolid.Bounds
    OpenSolid.Bounds2D
    OpenSolid.Bounds3D
    OpenSolid.Bytecode.Ast
    OpenSolid.Camera3D
    OpenSolid.Circle2D
    OpenSolid.Color
    OpenSolid.CompiledFunction
    OpenSolid.Composition
    OpenSolid.Convention3D
    OpenSolid.CoordinateSystem
    OpenSolid.Curve
    OpenSolid.Curve1D
    OpenSolid.Curve1D.WithNoInteriorZeros
    OpenSolid.Curve1D.WithNoZeros
    OpenSolid.Curve1D.Zero
    OpenSolid.Curve2D
    OpenSolid.Curve2D.EndpointIntersection
    OpenSolid.Curve2D.IntersectionPoint
    OpenSolid.Curve2D.Intersections
    OpenSolid.Curve2D.MedialAxis
    OpenSolid.Curve2D.OverlappingSegment
    OpenSolid.Curve3D
    OpenSolid.Curve3D.IntersectionPointWithSurface
    OpenSolid.Curve3D.IntersectionsWithSurface
    OpenSolid.Curve3D.SegmentOverlappingWithSurface
    OpenSolid.Debug
    OpenSolid.Debug.Plot
    OpenSolid.Desingularization
    OpenSolid.Direction
    OpenSolid.Direction2D
    OpenSolid.Direction3D
    OpenSolid.DirectionBounds2D
    OpenSolid.DirectionBounds3D
    OpenSolid.DirectionCurve
    OpenSolid.DirectionCurve2D
    OpenSolid.DirectionCurve3D
    OpenSolid.DirectionSurfaceFunction2D
    OpenSolid.DirectionSurfaceFunction3D
    OpenSolid.DivisionByZero
    OpenSolid.Domain1D
    OpenSolid.Domain2D
    OpenSolid.Duration
    OpenSolid.Estimate
    OpenSolid.Expression
    OpenSolid.FFI
    OpenSolid.Frame2D
    OpenSolid.Frame3D
    OpenSolid.Fuzzy
    OpenSolid.Gltf
    OpenSolid.HigherOrderZero
    OpenSolid.IO
    OpenSolid.IO.Parallel
    OpenSolid.Int
    OpenSolid.InternalError
    OpenSolid.Intersects
    OpenSolid.Interval
    OpenSolid.Json
    OpenSolid.Length
    OpenSolid.Line2D
    OpenSolid.List
    OpenSolid.Map
    OpenSolid.Maybe
    OpenSolid.Mesh
    OpenSolid.Mitsuba
    OpenSolid.Model3D
    OpenSolid.Named
    OpenSolid.NewtonRaphson
    OpenSolid.NonEmpty
    OpenSolid.Number
    OpenSolid.Orientation2D
    OpenSolid.Orientation3D
    OpenSolid.Pair
    OpenSolid.Parameter
    OpenSolid.PbrMaterial
    OpenSolid.Plane3D
    OpenSolid.PlaneOrientation3D
    OpenSolid.Point2D
    OpenSolid.Point3D
    OpenSolid.Polygon2D
    OpenSolid.Polyline2D
    OpenSolid.Prelude
    OpenSolid.Primitives
    OpenSolid.Quantity
    OpenSolid.Queue
    OpenSolid.Random
    OpenSolid.Region2D
    OpenSolid.Region2D.BoundedBy
    OpenSolid.Resolution
    OpenSolid.Result
    OpenSolid.Set
    OpenSolid.Set2D
    OpenSolid.Set3D
    OpenSolid.Sign
    OpenSolid.Solve1D
    OpenSolid.Solve2D
    OpenSolid.Stl
    OpenSolid.Stream
    OpenSolid.Surface1D
    OpenSolid.Surface2D
    OpenSolid.Surface3D
    OpenSolid.Surface3D.Revolved
    OpenSolid.SurfaceCurve3D
    OpenSolid.SurfaceFunction1D
    OpenSolid.SurfaceFunction1D.Zeros
    OpenSolid.SurfaceFunction2D
    OpenSolid.SurfaceFunction3D
    OpenSolid.SurfaceParameter
    OpenSolid.SurfaceVertex3D
    OpenSolid.Svg
    OpenSolid.Text
    OpenSolid.Timer
    OpenSolid.Todo
    OpenSolid.Tolerance
    OpenSolid.Transform
    OpenSolid.Transform2D
    OpenSolid.Transform3D
    OpenSolid.Triangle2D
    OpenSolid.Unitless
    OpenSolid.Units
    OpenSolid.UvBounds
    OpenSolid.UvPoint
    OpenSolid.UvSpace
    OpenSolid.Vector
    OpenSolid.Vector2D
    OpenSolid.Vector3D
    OpenSolid.VectorBounds2D
    OpenSolid.VectorBounds3D
    OpenSolid.VectorCurve
    OpenSolid.VectorCurve2D
    OpenSolid.VectorCurve2D.WithNoInteriorZeros
    OpenSolid.VectorCurve2D.WithNoZeros
    OpenSolid.VectorCurve3D
    OpenSolid.VectorCurve3D.WithNoInteriorZeros
    OpenSolid.VectorCurve3D.WithNoZeros
    OpenSolid.VectorSurface2D
    OpenSolid.VectorSurface3D
    OpenSolid.VectorSurfaceFunction2D
    OpenSolid.VectorSurfaceFunction3D
    OpenSolid.Volume
    OpenSolid.World3D

  other-modules:
    OpenSolid.Bytecode.Compile
    OpenSolid.Bytecode.Encode
    OpenSolid.Bytecode.Evaluate
    OpenSolid.Bytecode.Instruction
    OpenSolid.CDT
    OpenSolid.Curve1D.Bisection
    OpenSolid.HasZero
    OpenSolid.Linearization
    OpenSolid.Lobatto
    OpenSolid.Quadrature
    OpenSolid.Random.Internal
    OpenSolid.SurfaceFunction1D.Blending
    OpenSolid.SurfaceFunction1D.Desingularization
    OpenSolid.SurfaceFunction1D.HorizontalCurve
    OpenSolid.SurfaceFunction1D.ImplicitCurveBounds
    OpenSolid.SurfaceFunction1D.Internal
    OpenSolid.SurfaceFunction1D.PartialZeros
    OpenSolid.SurfaceFunction1D.Quotient
    OpenSolid.SurfaceFunction1D.SaddleRegion
    OpenSolid.SurfaceFunction1D.Subproblem
    OpenSolid.SurfaceFunction1D.VerticalCurve
    OpenSolid.SurfaceLinearization
    OpenSolid.Text.Parse
    OpenSolid.Unboxed.Math

  hs-source-dirs: src
  cxx-sources:
    src/OpenSolid/Bytecode/bytecode.cpp
    src/OpenSolid/CDT.cpp

  cxx-options:
    -Wall
    -Wextra
    -Werror
    -fPIC
    -std=c++17

  cmm-sources:
    src/OpenSolid/Bytecode/primops.cmm

  build-depends:
    system-cxx-std-lib

test-suite opensolid-core-test
  import: config
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    ansi-terminal,
    opensolid-core,

  other-modules:
    Test
    Tests.Array
    Tests.Bounds2D
    Tests.Bounds3D
    Tests.Curve1D
    Tests.Curve2D
    Tests.Direction2D
    Tests.DivMod
    Tests.Estimate
    Tests.Interval
    Tests.List
    Tests.Map
    Tests.NewtonRaphson
    Tests.NonEmpty
    Tests.Number
    Tests.Parameter
    Tests.Quantity
    Tests.Random
    Tests.Region2D
    Tests.Set2D
    Tests.Stream
    Tests.SurfaceFunction1D
    Tests.Text
    Tests.VectorBounds2D
    Tests.VectorBounds3D
    Tests.VectorCurve2D

  hs-source-dirs: test
