cabal-version: 2.2

name:           opensolid-ffi
version:        0.1.0.0
synopsis:       Open-source geometric modelling framework
description:    Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category:       Geometry
homepage:       https://github.com/ianmackenzie/opensolid#readme
bug-reports:    https://github.com/ianmackenzie/opensolid/issues
author:         Ian Mackenzie
maintainer:     ian.e.mackenzie@gmail.com
copyright:      2023 Ian Mackenzie
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: Haskell2010
  build-depends:
      base
    , template-haskell
    , opensolid
  ghc-options:
      -Wall
      -Werror
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-signatures
      -Wmissing-exported-signatures
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wsafe
      -dcore-lint
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
      MultiParamTypeClasses
      FlexibleInstances
      FlexibleContexts
      UndecidableInstances
      RebindableSyntax
      MonoLocalBinds
      KindSignatures
      StandaloneDeriving
      StrictData
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      DataKinds
      ScopedTypeVariables
      GADTs
      RoleAnnotations
      LexicalNegation
      ImportQualifiedPost
      StandaloneKindSignatures
      UndecidableSuperClasses
      ImplicitParams
      ConstraintKinds
      PatternSynonyms
      BlockArguments
      OverloadedLabels
      RankNTypes
      QualifiedDo
      TypeFamilies
      TypeOperators
      OverloadedRecordDot
      MagicHash
      TupleSections
      DeriveAnyClass
      DerivingStrategies
      ViewPatterns
      LambdaCase
      TemplateHaskell

foreign-library opensolid-ffi
  import: config
  type: native-shared
  hs-source-dirs: src
  other-modules:
      FFIWrapper
    , OpenSolidFFI
    , OpenSolidFFI.Point2d
    , Paths_opensolid_ffi
  autogen-modules: Paths_opensolid_ffi
  c-sources: src/wrapper.c
  install-includes: OpenSolidFFI_stub.h
  include-dirs: opensolid-ffi-tmp
  default-extensions:
      ForeignFunctionInterface

executable opensolid-python
  import: config
  hs-source-dirs: python
  main-is: Main.hs
  build-depends:
      language-python
  other-modules: PythonAST, Paths_opensolid_ffi
  autogen-modules: Paths_opensolid_ffi
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
