cabal-version: 2.2
name: opensolid-ffi
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

foreign-library opensolid-ffi
  if os(windows)
    options: standalone
    mod-def-file: opensolid-ffi.def
  default-language: GHC2021
  build-depends:
    base,
    opensolid-api,
    opensolid-core,
    template-haskell,

  type: native-shared
  hs-source-dirs: src
  other-modules:
    FFI
    ForeignExports

  c-sources: src/wrapper.c
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wno-missed-extra-shared-lib

  default-extensions:
    OverloadedStrings
    QualifiedDo
    RebindableSyntax
    TemplateHaskell

executable generate-def-file
  main-is: Main.hs
  hs-source-dirs: generate-def-file
  default-language: GHC2021
  build-depends:
    base,
    opensolid-api,
    opensolid-core,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wno-missed-extra-shared-lib

  default-extensions:
    OverloadedStrings
    QualifiedDo
    RebindableSyntax
