cabal-version: 3.8
name: opensolid-http
version: 0.1.0.0
synopsis: Simple HTTP server for OpenSolid
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2024
  build-depends:
    base,
    bytestring,
    case-insensitive,
    http-types,
    opensolid-core,
    text,
    wai,
    warp,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wsafe
    -Wno-missed-extra-shared-lib
    -fwrite-ide-info
    -hiedir=.hie

  default-extensions:
    BlockArguments
    DeriveAnyClass
    FunctionalDependencies
    ImplicitParams
    LexicalNegation
    MagicHash
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses
    UnliftedFFITypes
    ViewPatterns

library
  import: config
  exposed-modules:
    OpenSolid.Http.Request
    OpenSolid.Http.Response
    OpenSolid.Http.Server

  hs-source-dirs: src
