cabal-version: 2.2
name: opensolid-json
version: 0.1.0.0
synopsis: JSON serialization for OpenSolid types
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

library
  default-language: GHC2021
  build-depends:
    aeson,
    base,
    bytestring,
    opensolid,
    scientific,
    text,
    vector,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -Wno-missed-extra-shared-lib
    -fwrite-ide-info
    -hiedir=.hie
    -haddock

  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    LexicalNegation
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    StrictData
    ViewPatterns

  exposed-modules:
    OpenSolid.Json
    OpenSolid.Json.Format
    OpenSolid.Json.Schema

  other-modules:
    OpenSolid.Json.FieldSchema

  hs-source-dirs: src
