cabal-version: 2.2
name: opensolid-python
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

executable opensolid-python
  default-language: GHC2021
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    containers,
    opensolid,

  other-modules:
    Python
    Python.Class
    Python.FFI
    Python.Function
    Python.MemberFunction
    Python.StaticFunction
    Python.Type
    Python.Type.Registry

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    GADTs
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    ViewPatterns
