cabal-version: 3.8
name: opensolid-python
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

executable opensolid-python
  default-language: GHC2021
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    containers,
    opensolid-api,
    opensolid-core,

  other-modules:
    Python
    Python.AbsFunction
    Python.Class
    Python.ComparisonFunction
    Python.Constant
    Python.Constructor
    Python.EqualityFunction
    Python.FFI
    Python.Function
    Python.HashFunction
    Python.MemberFunction
    Python.NegationFunction
    Python.PostOperator
    Python.PreOperator
    Python.Property
    Python.StaticFunction
    Python.Type
    Python.Type.Registry
    Python.Upcast

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wsafe
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DataKinds
    GADTs
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    ViewPatterns
