cabal-version: 2.2
name: opensolid
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2021
  build-depends:
    aeson,
    ansi-terminal,
    array,
    async,
    base,
    bytestring,
    case-insensitive,
    colour,
    containers,
    deque,
    directory,
    http-types,
    random,
    scientific,
    text,
    time,
    type-errors,
    vector,
    wai,
    warp,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -dcore-lint
    -Wno-missed-extra-shared-lib
    -fwrite-ide-info
    -hiedir=.hie

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    ImplicitParams
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    RoleAnnotations
    StrictData
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses
    ViewPatterns

library
  import: config
  exposed-modules:
    Angle
    Arc2d
    Area
    Arithmetic
    Arithmetic.Unboxed
    Array
    Axis2d
    Axis3d
    Basics
    Basis2d
    Basis3d
    BezierCurve2d
    Bisection
    Bool
    Bounded
    Bounds
    Bounds2d
    Bounds3d
    Coalesce
    Colour
    Composition
    CoordinateSystem
    CubicSpline2d
    Curve1d
    Curve1d.Root
    Curve1d.Zeros
    Curve2d
    Curve2d.FindPoint
    Curve2d.IntersectionPoint
    Curve2d.Intersections
    Curve2d.MedialAxis
    Curve2d.OverlappingSegment
    -- Curve3d
    Debug
    Direction2d
    Direction3d
    DirectionBounds2d
    DirectionCurve2d
    Domain1d
    Domain2d
    Drawing2d
    Duration
    Error
    Estimate
    File
    Float
    Frame2d
    Frame3d
    Fuzzy
    Http.Server
    Http.Server.Request
    Http.Server.Response
    IO
    Int
    Intersects
    Jit
    Json
    Json.Format
    Json.Schema
    Length
    Line2d
    -- Line3d
    List
    Map
    Maybe
    NonEmpty
    OpenSolid
    OpenSolid.Json
    Pair
    Parameter
    Plane3d
    Point2d
    Point3d
    Polygon2d
    Polyline2d
    Qty
    QuadraticSpline2d
    -- QuadraticSpline3d
    Queue
    Random
    Random.Internal
    Range
    Region2d
    Region2d.BoundedBy
    Result
    Sign
    Solve1d
    Solve2d
    Stream
    Surface1d
    Surface1d.Function
    Surface1d.Function.Expression
    Surface1d.Function.HorizontalCurve
    Surface1d.Function.Internal
    Surface1d.Function.Subproblem
    Surface1d.Function.VerticalCurve
    Surface1d.Function.Zeros
    Surface2d
    Surface2d.Function
    -- Surface3d
    -- Surface3d.Function
    Text
    Tolerance
    Transform
    Transform2d
    Transform3d
    Triangle2d
    Typeable
    Units
    Uv
    Uv.Derivatives
    Uvw
    Vector2d
    Vector3d
    VectorBounds2d
    VectorBounds3d
    VectorCurve2d
    VectorCurve2d.DegenerateEndpoint
    VectorCurve2d.Direction
    VectorCurve2d.Zeros
    -- VectorCurve3d
    VectorSurface2d
    VectorSurface2d.Function
    -- VectorSurface3d
    -- VectorSurface3d.Function
    VectorVolume3d.Function
    Vertex2d
    Volume
    Volume1d
    Volume1d.Function

  other-modules:
    Curve1d.Integral
    Curve2d.Derivatives
    Curve2d.Segment
    -- Curve3d.Internal
    Json.FieldSchema
    Point2d.CoordinateTransformation
    Point3d.CoordinateTransformation
    Quadrature
    Surface1d.Function.PartialZeros
    Surface1d.Function.SaddleRegion
    Text.Parse
    Vector2d.CoordinateTransformation
    Vector3d.CoordinateTransformation

  hs-source-dirs: src

test-suite opensolid-test
  import: config
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: opensolid
  other-modules:
    Test
    Tests.Arc2d
    Tests.Bounds2d
    Tests.Curve1d
    Tests.Curve2d
    Tests.Direction2d
    Tests.DivMod
    Tests.Estimate
    Tests.Float
    Tests.List
    Tests.Map
    Tests.NonEmpty
    Tests.Parameter
    Tests.Qty
    Tests.Random
    Tests.Range
    Tests.Region2d
    Tests.Stream
    Tests.Text
    Tests.VectorBounds2d
    Tests.VectorBounds3d

  hs-source-dirs: test
