cabal-version: 2.2
name: opensolid
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2021
  build-depends:
    aeson,
    array,
    async,
    base,
    bytestring,
    colour,
    containers,
    deque,
    directory,
    random,
    scientific,
    text,
    time,
    vector,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -Wno-missed-extra-shared-lib
    -fwrite-ide-info
    -hiedir=.hie
    -haddock

  if impl(ghc >=9.10)
    ghc-options:
      -Wno-x-data-list-nonempty-unzip
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    ImplicitParams
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    RoleAnnotations
    StrictData
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    UndecidableSuperClasses
    UnliftedFFITypes
    ViewPatterns

custom-setup
  setup-depends:
    Cabal,
    Cabal-syntax,
    base,
    directory,
    filepath,
    process,

library
  import: config
  exposed-modules:
    Angle
    Arc2d
    Area
    Array
    Axis3d
    Basis2d
    Basis3d
    BezierCurve2d
    Bool
    Bounded
    Bounds
    Bounds2d
    Bounds3d
    Color
    Composition
    CoordinateSystem
    CubicSpline2d
    Debug
    Direction2d
    Direction3d
    DirectionBounds2d
    DirectionBounds3d
    DirectionCurve2d
    DirectionCurve3d
    Domain1d
    Domain2d
    Drawing2d
    Duration
    Error
    Estimate
    File
    Float
    Frame2d
    Frame3d
    Fuzzy
    IO
    Int
    Intersects
    Length
    Line2d
    Line3d
    List
    Map
    Maybe
    NonEmpty
    OpenSolid.Prelude
    OpenSolid.Arithmetic
    OpenSolid.Arithmetic.Unboxed
    OpenSolid.Axis2d
    OpenSolid.Curve1d
    OpenSolid.Curve1d.Zero
    OpenSolid.Curve1d.Zeros
    OpenSolid.Curve2d
    OpenSolid.Curve2d.FindPoint
    OpenSolid.Curve2d.IntersectionPoint
    OpenSolid.Curve2d.Intersections
    OpenSolid.Curve2d.MedialAxis
    OpenSolid.Curve2d.OverlappingSegment
    OpenSolid.Curve3d
    OpenSolid.Expression
    OpenSolid.Expression.Curve1d
    OpenSolid.Expression.Curve2d
    OpenSolid.Expression.Curve3d
    OpenSolid.Expression.Surface2d
    OpenSolid.Expression.VectorCurve2d
    OpenSolid.Expression.VectorCurve3d
    OpenSolid.Expression.VectorSurface2d
    OpenSolid.FFI
    OpenSolid.Json
    OpenSolid.Json.Format
    OpenSolid.Json.Schema
    OpenSolid.Point2d
    OpenSolid.Point3d
    OpenSolid.Qty
    OpenSolid.Random
    OpenSolid.Region2d
    OpenSolid.Region2d.BoundedBy
    OpenSolid.Surface1d
    OpenSolid.Surface1d.Function
    OpenSolid.Surface1d.Function.HorizontalCurve
    OpenSolid.Surface1d.Function.Subproblem
    OpenSolid.Surface1d.Function.VerticalCurve
    OpenSolid.Surface1d.Function.Zeros
    OpenSolid.Surface2d
    OpenSolid.Surface2d.Function
    OpenSolid.Surface3d
    OpenSolid.Surface3d.Function
    OpenSolid.Text
    OpenSolid.Uv.Derivatives
    OpenSolid.Vector2d
    OpenSolid.Vector3d
    OpenSolid.VectorCurve2d
    OpenSolid.VectorCurve2d.DegenerateEndpoint
    OpenSolid.VectorCurve2d.Direction
    OpenSolid.VectorCurve2d.Zeros
    OpenSolid.VectorCurve3d
    OpenSolid.VectorCurve3d.DegenerateEndpoint
    OpenSolid.VectorCurve3d.Direction
    OpenSolid.VectorCurve3d.Zeros
    OpenSolid.VectorSurface2d
    OpenSolid.VectorSurface2d.Function
    OpenSolid.VectorSurface3d
    OpenSolid.VectorSurface3d.Function
    OpenSolid.VectorVolume3d.Function
    OpenSolid.Volume1d
    OpenSolid.Volume1d.Function
    Pair
    Parameter
    Plane3d
    Polygon2d
    Polyline2d
    QuadraticSpline2d
    QuadraticSpline3d
    Queue
    Range
    Result
    Sign
    Solve1d
    Solve2d
    Stream
    SurfaceParameter
    Tolerance
    Transform
    Transform2d
    Transform3d
    Triangle2d
    Unitless
    Units
    VectorBounds2d
    VectorBounds3d
    Vertex2d
    Volume
    VolumeParameter

  other-modules:
    OpenSolid.Bootstrap
    OpenSolid.Curve1d.Integral
    OpenSolid.Curve3d.Internal
    OpenSolid.Expression.Scalar
    OpenSolid.Json.FieldSchema
    OpenSolid.Point2d.CoordinateTransformation
    OpenSolid.Point3d.CoordinateTransformation
    OpenSolid.Random.Internal
    OpenSolid.Surface1d.Function.Internal
    OpenSolid.Surface1d.Function.PartialZeros
    OpenSolid.Surface1d.Function.SaddleRegion
    OpenSolid.Text.Parse
    OpenSolid.Vector2d.CoordinateTransformation
    OpenSolid.Vector3d.CoordinateTransformation
    Quadrature

  hs-source-dirs: src
  extra-libraries:
    opensolid_jit

test-suite opensolid-test
  import: config
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    ansi-terminal,
    opensolid,

  other-modules:
    Test
    Tests.Arc2d
    Tests.Bounds2d
    Tests.Curve1d
    Tests.Curve2d
    Tests.Direction2d
    Tests.DivMod
    Tests.Estimate
    Tests.Float
    Tests.List
    Tests.Map
    Tests.NonEmpty
    Tests.Parameter
    Tests.Qty
    Tests.Random
    Tests.Range
    Tests.Region2d
    Tests.Stream
    Tests.Text
    Tests.VectorBounds2d
    Tests.VectorBounds3d

  hs-source-dirs: test
