cabal-version: 2.2

name:           opensolid-sandbox
version:        0.1.0.0
synopsis:       Open-source geometric modelling framework
description:    Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category:       Geometry
homepage:       https://github.com/ianmackenzie/opensolid#readme
bug-reports:    https://github.com/ianmackenzie/opensolid/issues
author:         Ian Mackenzie
maintainer:     ian.e.mackenzie@gmail.com
copyright:      2023 Ian Mackenzie
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

executable sandbox
  main-is: Main.hs
  other-modules: Paths_opensolid_sandbox
  autogen-modules: Paths_opensolid_sandbox
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      array
    , base
    , containers
    , random
    , opensolid
  ghc-options:
      -Wall
      -Werror
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-signatures
      -Wmissing-exported-signatures
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wsafe
      -dcore-lint
      -threaded
      -rtsopts
      -with-rtsopts=-N
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
      MultiParamTypeClasses
      FlexibleInstances
      FlexibleContexts
      UndecidableInstances
      RebindableSyntax
      MonoLocalBinds
      KindSignatures
      StandaloneDeriving
      StrictData
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      DataKinds
      ScopedTypeVariables
      GADTs
      RoleAnnotations
      LexicalNegation
      ImportQualifiedPost
      StandaloneKindSignatures
      UndecidableSuperClasses
      ImplicitParams
      ConstraintKinds
      PatternSynonyms
      BlockArguments
      OverloadedLabels
      RankNTypes
      QualifiedDo
      TypeFamilies
      TypeOperators
      OverloadedRecordDot
      MagicHash
      TupleSections
      DeriveAnyClass
      DerivingStrategies
      ViewPatterns
      LambdaCase
      NamedFieldPuns
      DisambiguateRecordFields
