cabal-version: 2.2
name: opensolid-test-server
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

executable test-server
  main-is: Main.hs
  other-modules: Paths_opensolid_test_server
  autogen-modules: Paths_opensolid_test_server
  hs-source-dirs: src
  default-language: GHC2021
  build-depends:
    array,
    base,
    containers,
    opensolid,
    random,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -dcore-lint
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    GADTs
    LambdaCase
    LexicalNegation
    OverloadedStrings
    QualifiedDo
    RebindableSyntax
