[project]
name = "opensolid"
version = "0.1.0"
authors = [{ name = "Ian Mackenzie", email = "ian.e.mackenzie@gmail.com" }]
description = "A collection of classes for 2D/3D geometric modelling"
requires-python = ">=3.12"

[project.urls]
source = "https://github.com/ianmackenzie/opensolid"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "setuptools>=75.6.0"]
