[project]
name = "opensolid"
version = "0.1.2"
requires-python = ">=3.12"
authors = [{ name = "Ian Mackenzie", email = "ian.e.mackenzie@gmail.com" }]
description = "An under-development 2D/3D CAD library"
readme = "README.rst"

[project.urls]
source = "https://github.com/ianmackenzie/opensolid"
documentation = "https://opensolid.github.io/docs/0.1.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "setuptools>=75.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
